deployfolder/objects/SFDC_Investment_Bank__c.object
<CustomObject>
    <description>Investment Banks that are involved in generating ideas, advising transactions, or providing funding for transactions.</description>
    <label>Bank / Analyst</label>
    <nameField>
        <label>Bank / Analyst Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks / Analysts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Been_Involved_in_a_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Investment Bank has been involved on either side of a deal with your company.</description>
        <label>Been Involved in a Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number for the Investment Bank.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Investment Bank.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research Analyst</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>